# OpenGL_CLion

./: CMakeLists.txt  hello_trigangle.h  main.cpp  rendertriger.h  vertex_shader_render_triger.h
shader/: shader_sample.h
